[chore] .gitignoreの整理、quizフォルダの追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 .venv
 .env
-app/memo.py
-highlight
-summary
-problem_bank
-memo.py
-build
-dist
-app.spec
-captions
 __pycache__
 *.json
+app/memo.py
+app.spec
+build
+captions
+dist
+highlight
+memo.py
+problem_bank
+summary
+quiz
